--- a/obsidian.css
+++ b/obsidian.css
@@ -9,10 +9,10 @@
   --light2: #d6deeb;
   --light3: #ffffffcc;
 
-  --frost0: #d1aaff;
-  --frost1: #a599e9;
-  --frost2: #7e57c2;
-  --frost3: #7e57c2cc;
+  --purp0: #d1aaff;
+  --purp1: #a599e9;
+  --purp2: #7e57c2;
+  --purp3: #7e57c2cc;
 
   --red: #ef5350;
   --orange: #ffca28;
@@ -36,19 +36,19 @@
   --text-title-h3: var(--yellow);
   --text-title-h4: var(--green);
   --text-title-h5: var(--purple);
-  --text-link: var(--frost0);
-  --text-a: var(--frost3);
-  --text-a-hover: var(--frost2);
-  --text-mark: rgba(136, 192, 208, 0.3); /* frost1 */
+  --text-link: var(--purp0);
+  --text-a: var(--purp3);
+  --text-a-hover: var(--purp2);
+  --text-mark: rgba(136, 192, 208, 0.3); /* purp1 */
   --pre-code: var(--dark1);
   --text-highlight-bg: var(--dark3);
-  --interactive-accent: var(--frost0);
+  --interactive-accent: var(--purp0);
   --interactive-before: var(--dark3);
   --background-modifier-border: var(--dark2);
   --text-accent: var(--orange);
   --interactive-accent-rgb: var(--orange);
-  --inline-code: var(--frost1);
-  --code-block: var(--frost1);
+  --inline-code: var(--purp1);
+  --code-block: var(--purp1);
   --vim-cursor: var(--orange);
   --text-selection: var(--dark3);
 }
@@ -65,19 +65,19 @@
   --text-title-h3: var(--yellow);
   --text-title-h4: var(--green);
   --text-title-h5: var(--purple);
-  --text-link: var(--frost0);
-  --text-a: var(--frost3);
-  --text-a-hover: var(--frost1);
-  --text-mark: rgba(136, 192, 208, 0.3); /* frost1 */
+  --text-link: var(--purp0);
+  --text-a: var(--purp3);
+  --text-a-hover: var(--purp1);
+  --text-mark: rgba(136, 192, 208, 0.3); /* purp1 */
   --pre-code: var(--light2);
   --text-highlight-bg: var(--light0);
-  --interactive-accent: var(--frost0);
+  --interactive-accent: var(--purp0);
   --interactive-before: var(--light0);
   --background-modifier-border: var(--light1);
   --text-accent: var(--orange);
   --interactive-accent-rgb: var(--orange);
-  --inline-code: var(--frost1);
-  --code-block: var(--frost1);
+  --inline-code: var(--purp1);
+  --code-block: var(--purp1);
   --vim-cursor: var(--orange);
   --text-selection: var(--light0);
 }
@@ -215,12 +215,12 @@ img {
 .CodeMirror-linenumber,
 .cm-formatting {
   font-family: var(--font-monospace) !important;
-  color: var(--frost2) !important;
+  color: var(--purp2) !important;
 }
 
 .cm-hashtag,
 .search-result-file-matched-text {
-  color: var(--frost2) !important;
+  color: var(--purp2) !important;
 }
 
 .markdown-preview-section pre code,
@@ -381,17 +381,16 @@ img {
 }
 
 input.task-list-item-checkbox {
-  border: 1px solid var(--frost3);
+  border: 1px solid var(--purp3);
   appearance: none;
   -webkit-appearance: none;
 }
 
 input.task-list-item-checkbox:checked {
-  background-color: var(--frost2);
+  background-color: var(--purp2);
   box-shadow: inset 0 0 0 2px var(--background-primary);
 }
 
 .mermaid .note {
-  fill: var(--frost3) !important;
+  fill: var(--purp3) !important;
 }
-
